Fixed bullets to not wrap to new lines

--- a/css/subpages-general.css
+++ b/css/subpages-general.css
@@ -126,6 +126,10 @@ body {
   margin-bottom: 4px;
 }
 
+.text-grid p span:not(:last-child)::after {
+  content: " •";
+}
+
 .text-grid h1 {
   font-family: "GT America Extended", Helvetica Neue, sans-serif;
   font-weight: 900;
@@ -214,7 +218,7 @@ body {
 }
 
 .film-details p {
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 .bullet-spacer {
